Immediately store to disk changes to experimental flags.

Bug: 758891
Change-Id: I95352f3f2abcd6484a940aeb5c694d3ec868dcaa
Reviewed-on: https://chromium-review.googlesource.com/633923
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: Alexei Svitkine (very slow) <asvitkine@chromium.org>
Commit-Queue: Jean-François Geyelin <jif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497423}
Former-commit-id: 69df1456d46ec39f63feff5c3721e0d47059b928